--- a/Modulo 2/Aula 32/style.css
+++ b/Modulo 2/Aula 32/style.css
@@ -85,3 +85,28 @@ li btnComprado {
   padding: 5px 10px;
   cursor: pointer;
 }
+
+#Tcomprados, #contagem {
+  display: inline-block;
+  text-align: right;
+  font-size: 20px;
+  color: #555;
+  margin-top: 20px;
+  margin-left: 10px;
+  background: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  box-shadow: 0 0px 10px rgba(0,0,0,0.1);
+  position: fixed;
+  right: 30px;
+}
+
+#Tcomprados {
+  bottom: 20px;
+  right: 88px;
+}
+
+#contagem {
+  bottom: 20px;
+   /* Ajuste para colocar à esquerda de #Tcomprados */
+}
